--- a/css/complex.css
+++ b/css/complex.css
@@ -3,45 +3,22 @@ body {
     color: #fefefe;
 }
 
-.titleSpace {
-    min-height:82%;
-
-}
 .titleSpace h1 {
     color: #74dde0;
     text-align: center;
     font-family: 'Oswald', sans-serif;
 }
 
+.descriptionSpace {
+    background-color: #f1f1f1;
+    color: #111111;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 1.1em;
+}
+
 .graphSpace {
     background-color: #f1f1f1;
     color: #111111;
-}
-
-.controlSpace {
-    background-color: #f1f1f1;
-    color: #111111;
-
-}
-
-.bottomSpace {
-    background-color: #101010;
-    color: #f1f1f1;
-    min-height:18%;
-}
-#divFormulaDefinicion {
-}
-
-.row{
-    overflow: hidden; 
-}
-
-[class*="col-"]{
-    margin-bottom: -99999px;
-    padding-bottom: 99999px;
-}
-
-.funcionOriginal {
-    stroke: #101010;
-    stroke-width: 2px;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 1.1em;
 }
